--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "react-basics",
+  "name": "React-Basic-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-input-range": "^1.3.0",
     "react-scripts": "1.0.17",
+    "react-search-input": "^0.11.3",
     "reactstrap": "^5.0.0-alpha.4"
   },
   "scripts": {
